kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 474874559286.dkr.ecr.us-east-1.amazonaws.com/cloudnative-eks-dev-platform-ecr-repo:backend-latest
          ports:
            - containerPort: 3000
